[gd_scene load_steps=19 format=2]

[ext_resource path="res://ui/general/Button.gd" type="Script" id=1]
[ext_resource path="res://ui/game_states/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://ui/general/WarningPopup.gd" type="Script" id=3]
[ext_resource path="res://ui/general/textures/gui.png" type="Texture" id=4]
[ext_resource path="res://ui/general/Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/general/fonts/bitmgothic.tres" type="DynamicFont" id=6]
[ext_resource path="res://ui/general/fonts/HeartbitXX.tres" type="DynamicFont" id=7]

[sub_resource type="Animation" id=2]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Content:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Blur:material:shader_param/blur_amount")
tracks/1/interp = 2
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0 ]
}

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/blur_amount = 2.0

[sub_resource type="StyleBoxTexture" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
texture = ExtResource( 4 )
region_rect = Rect2( 145, 81, 46, 14 )

[sub_resource type="StyleBoxTexture" id=8]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
texture = ExtResource( 4 )
region_rect = Rect2( 145, 98, 46, 13 )

[sub_resource type="StyleBoxTexture" id=9]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
texture = ExtResource( 4 )
region_rect = Rect2( 145, 113, 46, 14 )

[sub_resource type="StyleBoxTexture" id=10]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
texture = ExtResource( 4 )
region_rect = Rect2( 145, 81, 46, 14 )

[sub_resource type="StyleBoxTexture" id=5]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0
texture = ExtResource( 4 )
region_rect = Rect2( 145, 81, 46, 14 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 4 )
region_rect = Rect2( 2, 34, 44, 44 )
margin_left = 30.0
margin_right = 30.0
margin_top = 14.0
margin_bottom = 14.0

[sub_resource type="Animation" id=6]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
pause_game = true
default_focus_path = NodePath("Content/VBox/ButtonCenter/ButtonVBox/ContinueButton")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blur = SubResource( 2 )

[node name="Blur" type="ColorRect" parent="."]
material = SubResource( 4 )
margin_right = 480.0
margin_bottom = 270.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Content"]
margin_left = 40.0
margin_top = 40.0
margin_right = 440.0
margin_bottom = 250.0
mouse_filter = 2

[node name="TitleContainer" type="CenterContainer" parent="Content/VBox"]
margin_right = 400.0
margin_bottom = 48.0
mouse_filter = 2

[node name="Title" type="Label" parent="Content/VBox/TitleContainer"]
margin_left = 53.0
margin_right = 347.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 6 )
text = "Perla Knight"

[node name="ButtonCenter" type="CenterContainer" parent="Content/VBox"]
margin_top = 52.0
margin_right = 400.0
margin_bottom = 210.0
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonVBox" type="VBoxContainer" parent="Content/VBox/ButtonCenter"]
margin_left = 145.0
margin_top = 21.0
margin_right = 255.0
margin_bottom = 137.0
mouse_filter = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="Content/VBox/ButtonCenter/ButtonVBox" instance=ExtResource( 5 )]
margin_right = 110.0
margin_bottom = 32.0
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../NewGameButton")
focus_next = NodePath("../NewGameButton")
focus_previous = NodePath("../ExitButton")
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 7 )
text = "Continue"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="Content/VBox/ButtonCenter/ButtonVBox" instance=ExtResource( 5 )]
margin_top = 42.0
margin_right = 110.0
margin_bottom = 74.0
focus_neighbour_top = NodePath("../ContinueButton")
focus_neighbour_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../ContinueButton")
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 7 )
text = "New Game"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Content/VBox/ButtonCenter/ButtonVBox" instance=ExtResource( 5 )]
margin_top = 126.0
margin_right = 110.0
margin_bottom = 158.0
focus_neighbour_top = NodePath("../NewGameButton")
focus_neighbour_bottom = NodePath("../ContinueButton")
focus_next = NodePath("../ContinueButton")
focus_previous = NodePath("../NewGameButton")
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 7 )
text = "Exit"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGamePopup" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.0
margin_top = -48.0
margin_right = 141.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 5
custom_styles/panel = SubResource( 11 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="NewGamePopup"]
anims/blur = SubResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="NewGamePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 14.0
margin_right = -30.0
margin_bottom = -14.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NewGamePopup/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 217.0
margin_bottom = 129.0
mouse_filter = 2
custom_constants/separation = 19
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewGamePopup/MarginContainer/VBoxContainer"]
margin_right = 212.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 7 )
text = "Are you sure you want to start a new game? Your progress will be lost."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="NewGamePopup/MarginContainer/VBoxContainer"]
margin_top = 67.0
margin_right = 212.0
margin_bottom = 97.0
mouse_filter = 2
custom_constants/separation = 15

[node name="ConfirmButton" type="Button" parent="NewGamePopup/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_right = 98.0
margin_bottom = 30.0
focus_neighbour_left = NodePath("../CancelButton")
focus_neighbour_right = NodePath("../CancelButton")
focus_next = NodePath("../CancelButton")
focus_previous = NodePath("../CancelButton")
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 7 )
text = "Yes"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="NewGamePopup/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 113.0
margin_right = 212.0
margin_bottom = 30.0
focus_neighbour_left = NodePath("../ConfirmButton")
focus_neighbour_right = NodePath("../ConfirmButton")
focus_next = NodePath("../ConfirmButton")
focus_previous = NodePath("../ConfirmButton")
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 7 )
text = "No"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitPopup" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.0
margin_top = -48.0
margin_right = 141.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 5
custom_styles/panel = SubResource( 11 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ExitPopup"]
anims/blur = SubResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="ExitPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 14.0
margin_right = -30.0
margin_bottom = -14.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ExitPopup/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 267.0
margin_bottom = 72.0
mouse_filter = 2
custom_constants/separation = 19
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ExitPopup/MarginContainer/VBoxContainer"]
margin_right = 212.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 7 )
text = "Are you sure you want to quit?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ExitPopup/MarginContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 212.0
margin_bottom = 63.0
mouse_filter = 2
custom_constants/separation = 15

[node name="ConfirmButton" type="Button" parent="ExitPopup/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_right = 98.0
margin_bottom = 30.0
focus_neighbour_left = NodePath("../CancelButton")
focus_neighbour_right = NodePath("../CancelButton")
focus_next = NodePath("../CancelButton")
focus_previous = NodePath("../CancelButton")
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 7 )
text = "Yes"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="ExitPopup/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 113.0
margin_right = 212.0
margin_bottom = 30.0
focus_neighbour_left = NodePath("../ConfirmButton")
focus_neighbour_right = NodePath("../ConfirmButton")
focus_next = NodePath("../ConfirmButton")
focus_previous = NodePath("../ConfirmButton")
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 7 )
text = "No"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Content/VBox/ButtonCenter/ButtonVBox/ContinueButton" to="." method="on_continue_pressed"]
[connection signal="pressed" from="Content/VBox/ButtonCenter/ButtonVBox/NewGameButton" to="." method="on_new_game_pressed"]
[connection signal="pressed" from="Content/VBox/ButtonCenter/ButtonVBox/ExitButton" to="." method="on_exit_pressed"]
[connection signal="popup_hide" from="NewGamePopup" to="NewGamePopup" method="close" binds= [ false ]]
[connection signal="pressed" from="NewGamePopup/MarginContainer/VBoxContainer/HBoxContainer/ConfirmButton" to="NewGamePopup" method="close" binds= [ true ]]
[connection signal="pressed" from="NewGamePopup/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="NewGamePopup" method="close" binds= [ false ]]
[connection signal="popup_hide" from="ExitPopup" to="ExitPopup" method="close" binds= [ false ]]
[connection signal="pressed" from="ExitPopup/MarginContainer/VBoxContainer/HBoxContainer/ConfirmButton" to="ExitPopup" method="close" binds= [ true ]]
[connection signal="pressed" from="ExitPopup/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="ExitPopup" method="close" binds= [ false ]]
